# music-publishing-lifecycle

./: .env.example  Makefile  README.md  docker-compose.dev.yml  music-publishing-architecture.md  package.json  pnpm-workspace.yaml  project-structure.md
apps/admin-portal/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/admin-portal/src/: App.tsx  index.css
apps/admin-portal/src/components/: Button.tsx  DataTable.tsx  Layout.tsx  Sidebar.tsx
apps/admin-portal/src/hooks/: useAuth.ts
apps/admin-portal/src/lib/: api.ts  utils.ts
apps/admin-portal/src/pages/Dashboard/: DashboardPage.tsx
apps/admin-portal/src/pages/Deals/: DealDetailDrawer.tsx  DealFormModal.tsx  DealsPage.tsx  index.ts
apps/admin-portal/src/pages/Usage/: UnmatchedQueuePage.tsx  UsageDashboardPage.tsx  index.ts
apps/admin-portal/src/pages/Works/: WorkDetailDrawer.tsx  WorkFormModal.tsx  WorksPage.tsx
apps/admin-portal/src/stores/: auth.ts
db/: init.sql
db/migrations/: 001_initial_schema.sql
db/seeds/: seed_data.sql
services/ai/: Dockerfile  pyproject.toml
services/ai/src/: config.py  main.py
services/ai/src/agents/: __init__.py  contract_agent.py
services/ai/src/routers/: __init__.py  contracts.py  usage.py
services/ai/src/tools/: __init__.py  template_tools.py
services/auth/: Dockerfile  pyproject.toml
services/auth/src/: config.py  database.py  main.py
services/auth/src/models/: __init__.py  user.py
services/auth/src/routers/: auth.py
services/auth/src/schemas/: __init__.py  auth.py
services/auth/src/services/: auth_service.py
services/deals/: Dockerfile  pyproject.toml
services/deals/src/: config.py  database.py  main.py
services/deals/src/models/: __init__.py  deal.py
services/deals/src/routers/: __init__.py  deals.py
services/deals/src/schemas/: __init__.py  deal.py
services/deals/src/services/: __init__.py  deal_service.py
services/royalties/: Dockerfile  pyproject.toml
services/royalties/src/: main.py
services/workers/matching_worker/: Dockerfile  pyproject.toml
services/workers/matching_worker/matching_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/workers/matching_worker/src/: config.py  database.py  main.py  models.py
services/workers/matching_worker/src/agents/: __init__.py  matching_agent.py
services/workers/matching_worker/src/tools/: __init__.py  embedding_matcher.py  fuzzy_matcher.py  isrc_matcher.py
services/workers/shared/: __init__.py  kafka_utils.py  schemas.py
services/workers/usage_processor/: pyproject.toml
services/workers/usage_processor/src/: config.py  database.py  embedding_service.py  main.py  models.py
services/workers/usage_processor/src/normalizers/: __init__.py  apple_music.py  base.py  generic.py  spotify.py
services/workers/usage_processor/usage_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/works/: Dockerfile  pyproject.toml
services/works/src/: __init__.py  config.py  main.py
services/works/src/models/: __init__.py  work.py
services/works/src/routers/: __init__.py  recordings.py  works.py
services/works/src/schemas/: __init__.py  work.py
services/works/src/services/: __init__.py  embedding_service.py  work_service.py
