[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "royalties-service"
version = "0.1.0"
description = "Royalty calculation and statement generation service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
