[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matching-worker"
version = "0.1.0"
description = "Kafka consumer for matching usage data to works using AI"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "langgraph>=0.0.20",
    "pgvector>=0.2.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
